sandbox-k8s-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sandbox-k8s-app-pod
  labels:
    creation_method: manual
    env: prod
    app: sandbox-k8s-app
spec:
  containers:
    - image: jlotz/sandbox-k8s-app-image
      name: sandbox-k8s-app-container
      livenessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 15
      ports:
        - containerPort: 8080
          protocol: TCP
