sandbox-k8s-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sandbox-k8s-volume-pod
spec:
  containers:
    - image: alpine
      imagePullPolicy: IfNotPresent
      name: sandbox-k8s-volume-container-1
      command: ['sh', '-c']
      args: ['echo Container 1 is running; sleep 3600']
      volumeMounts:
        - mountPath: /demo1
          name: demo-volume
    - image: alpine
      imagePullPolicy: IfNotPresent
      name: sandbox-k8s-volume-container-2
      command: ['sh', '-c']
      args: ['echo Container 2 is running; sleep 3600']
      volumeMounts:
        - mountPath: /demo2
          name: demo-volume
  volumes:
    - name: demo-volume
      emptyDir: {}
