sandbox-k8s-clusterip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-k8s-clusterip-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: sandbox-k8s-app
