sandbox-k8s-loadbalancer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-k8s-loadbalancer-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: sandbox-k8s-app
