sandbox-k8s-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-k8s-nodeport-svc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30123
  selector:
    app: sandbox-k8s-app
