sandbox-k8s-ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-k8s-ingress-svc
spec:
  rules:
    - host: sandbox-k8s.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sandbox-k8s-nodeport-svc
                port:
                  number: 80
