sandbox-k8s-ingress-tls-svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sandbox-k8s-ingress-tls-svc
spec:
  tls:
    - hosts:
        - sandbox-k8s.example.com
      secretName: tls-secret
  rules:
    - host: sandbox-k8s.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sandbox-k8s-nodeport-svc
              servicePort: 80
